--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN = 7135658901:AAHVSv61PEsaBB0qtl4aaSeJ-lhlREEh0yQ
-API_KEY=88f0ae947a4348fdbcd140926240505
+BOT_TOKEN = <enter telegram token>
+API_KEY=<enter key for access to https://api.weatherapi.com>
 BASE_URL=https://api.weatherapi.com/v1
